bugfix(hero) changed height to min-height to prevent cut off content on small mobile

--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 60vh;
+    min-height: 60vh;
     color: var(--text-light);
     font-family: var(--font-family);
     text-align: center;
